--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "league/fractal": "^0.14.0",
         "laravel/passport": "^1.0",
         "shrikeh/teapot": "^2.2",
-        "mpociot/laravel-apidoc-generator": "^1.6"
+        "mpociot/laravel-apidoc-generator": "^1.6",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
